// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceProviderPage should match the snapshot when user is connected 1`] = `
<div>
  <div
    class="content-wrapper-lg text-center fr-mt-8w"
    id="page-container"
  >
    <h1
      class="is-blue-france"
    >
      Fournisseurs de service
    </h1>
    <p>
      Bienvenue 
      firstnameValue
       
      lastnameValue
       !
    </p>
  </div>
</div>
`;

exports[`ServiceProviderPage should match the snapshot when user is connected but lastname is missing is undefined 1`] = `
<div>
  <div
    class="content-wrapper-lg text-center fr-mt-8w"
    id="page-container"
  >
    <h1
      class="is-blue-france"
    >
      Fournisseurs de service
    </h1>
    <p>
      Bienvenue 
      firstnameValue
       
      lastnameValue
       !
    </p>
  </div>
</div>
`;

exports[`ServiceProviderPage should match the snapshot when user is connected but userinfos is undefined 1`] = `
<div>
  <div
    class="content-wrapper-lg text-center fr-mt-8w"
    id="page-container"
  >
    <h1
      class="is-blue-france"
    >
      Fournisseurs de service
    </h1>
    <p>
      Bienvenue 
       
       !
    </p>
  </div>
</div>
`;

exports[`ServiceProviderPage should match the snapshot when user is not connected 1`] = `
<div>
  <div
    class="content-wrapper-lg text-center fr-mt-8w"
    id="page-container"
  >
    <h1
      class="is-blue-france"
    >
      Fournisseurs de service
    </h1>
    <p>
      Vous devez 
      <a
        href="/login"
      >
        vous connecter
      </a>
       pour accéder à cette page ultra sécurisée
    </p>
  </div>
</div>
`;
